# CXEMA

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  THIRD_PARTY.md  TODO.md  dist-workspace.toml  music.md
levels/: 01_cx04.json  01_inverter.json  02_and_or.json  02_cx08.json  03_cx02.json  04_cx00.json  05_cxr01.json  06_cx279.json  07_cx279e.json  08_cx556.json  09_cx74.json  10_cxf02.json  11_cx139.json  12_cx83.json  13_cx93.json  14_cx153.json  15_cx161.json  16_cx195.json  17_cx6116.json  18_cx181.json
scripts/: generate_test_vectors.py
src/: main.rs
