[package]
name = "cxema"
version = "0.1.3"
edition = "2024"
repository = "https://github.com/JakeEhrlich/CXEMA"

[dependencies]
bdf-parser = "0.1.0"
minifb = "0.28.0"
cpal = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
